feat(docs): se actualiza documentacion
